...
  const JenisPengaduan({super.key});

  @override
  State<JenisPengaduan> createState() => _JenisPengaduanState();
}

const List<String> listJenis = <String>['Jalan', 'Lampu Jalan', 'Jembatan'];


class _JenisPengaduanState extends State<JenisPengaduan> {
  @override
  Widget build(BuildContext context) {
    final laporanprovider = context.watch<LaporanProvider>();
...
          height: 52,
          child: DropdownButtonFormField<String>(
              borderRadius: BorderRadius.circular(20),
              icon: Icon(Icons.keyboard_arrow_down),
              dropdownColor: Colors.white,
              hint: const Text( 
              "Pilih Jenis",
              style: TextStyle(
                fontFamily: 'Instrument-Sans',
                fontSize: 14,
                fontWeight: FontWeight.w400,
                color: Color.fromRGBO(98, 116, 142, 1), 
              ),
...
