...
  const CuacaPengaduan({super.key});

  @override
  State<CuacaPengaduan> createState() => _CuacaPengaduanState();
}

const List<String> listCuaca = <String>['Cerah', 'Hujan'];

class _CuacaPengaduanState extends State<CuacaPengaduan> {
  @override
  Widget build(BuildContext context) {
    final laporanprovider = context.watch<LaporanProvider>();
    final selectedCuaca = laporanprovider.cuaca;
...
          child: DropdownButtonFormField<String>(
              key: const Key('cuaca_dropdown'),
              borderRadius: BorderRadius.circular(20),
              icon: Icon(Icons.keyboard_arrow_down),
              dropdownColor: Colors.white,
              hint: const Text( 
              "Pilih cuaca",
              style: TextStyle(
                fontFamily: 'Instrument-Sans',
                fontSize: 14,
                fontWeight: FontWeight.w400,
                color: Color.fromRGBO(98, 116, 142, 1), 
              ),
...
