...

Future dialogCallbackBuatLapor(BuildContext context, String typeDialog) {
  var iconAnimation = '';
  var pesan = '';
  if (typeDialog == 'berhasil') {
    iconAnimation = 'assets/icons/dialog/checkanimation.json';
    pesan = 'Laporan berhasil dikirim';
  } else if (typeDialog == 'tidak_lengkap') {
    iconAnimation = 'assets/icons/dialog/alertanimation.json';
    pesan = 'Lengkapi laporan terlebih dahulu';
  } else if (typeDialog == 'gagal') {
    iconAnimation = 'assets/icons/dialog/failedanimation.json';
    pesan = 'Laporan gagal dikirim';
...
