...
            onPressed: () async {
              final image = await picker.pickImage(source: ImageSource.gallery);
              Navigator.pop(context);
              onImagePicked(image);
            },
            child: const Text(
              'Galeri',
              style: TextStyle(
                color: Colors.black,
                fontFamily: 'Instrument-Sans',
                fontSize: 17,
                fontWeight: FontWeight.w500,
              ),
...
